--- a/mdaum.html
+++ b/mdaum.html
@@ -5,12 +5,14 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width">
     <link rel="icon" sizes="196x196" href="bunny.png">
-    <title>Bunny Defender</title>
+    <title>Where Am I From</title>
     <script src="libs/phaser.js"></script> <!--including phaser library-->
     <script src="js/Boot.js"></script> <!--//abstracted js file we use to boot the game-->
     <script src="js/Preloader.js"></script> <!--//the actual preloader-->
     <script src="js/StartMenu.js"></script>
-    <script src="js/Game.js"></script>
+    <script src="js/SelinieGame.js"></script>
+    <script src="js/ErnestoGame.js"></script>
+    <script src="js/AmjadGame.js"></script>
     <style>
         body {
             padding: 0;
@@ -27,7 +29,9 @@
         game.state.add('Boot', BunnyDefender.Boot);//Simply creating a boot state
         game.state.add('Preloader',BunnyDefender.Preloader);//simply creating a preloader state
         game.state.add('StartMenu',BunnyDefender.StartMenu);
-        game.state.add('Game',BunnyDefender.Game);
+        game.state.add('SelinieGame',BunnyDefender.SelinieGame);
+        game.state.add('ErnestoGame',BunnyDefender.ErnestoGame);
+        game.state.add('AmjadGame',BunnyDefender.AmjadGame);
         game.state.start('Boot');//Boot state invokes preloader state, so we simply start the boot state
     }
 </script>
